src/test/compile-fail/oversized-literal.rs
// error-pattern:literal out of range

fn main() { log_full(core::debug, 300u8); }
